tests/invalid/runtime/list_index_oob.pts
import Io;

function main() : void {
    list<int> values = [1, 2, 3];
    int x = values[10];
    Io.printLine(x.toString());
}
